# AndroidTest

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lvhiei/androidtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/MediaTest/: MediaTest.cpp  MediaTest.h
app/src/main/cpp/audioTest/: AacReader.cpp  AacReader.h  AudioFrameDecoder.cpp  AudioFrameDecoder.h  AudioStreamDecoder.cpp  AudioStreamDecoder.h  CAACHe2Lc.cpp  CAACHe2Lc.h  put_bits.h
app/src/main/cpp/codec/: VVAVDecoder.h  VVAVEncoder.h
app/src/main/cpp/format/: Mp4Muxer.cpp  VVAVFormat.cpp  VVAVFormat.h
app/src/main/cpp/jniObject/: JNIAudioRecorder.cpp  JNIAudioRecorder.h  JniHelper.cpp  JniHelper.h
app/src/main/cpp/util/: TimeUtil.cpp  TimeUtil.h  const.h  logUtil.h
app/src/main/java/com/lvhiei/androidtest/: JniTools.java  MainActivity.java
app/src/main/java/com/lvhiei/androidtest/Tools/: AudioRecorder.java  MemUtil.java  VVRoomCodecDecoder.java  VideoConfig.java
app/src/main/java/com/lvhiei/androidtest/log/: ATLog.java  FileLog.java
app/src/main/java/com/lvhiei/androidtest/test/: AACHe2LcTest.java  AudioHardDecoder.java  AudioHardDecoderTest.java  AudioRecorderTest.java  AudioSoftDecoder4Test.java  AudioSoftDecoderTest.java  BaseTest.java  ITest.java  JniAudioRecorderTest.java  JniEnvTest.java  MediaPlayer4AudioTest.java  Mi3MediaCodecDecoderTest.java  YunceMediaCodecDecoderTest.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  styles.xml
app/src/test/java/com/lvhiei/androidtest/: ExampleUnitTest.java
